# lastricks

./: .gitignore  README.md  lastricks_env.yaml  lastricks_v2_env.yml  pyproject.toml  requirements.txt  tools.py
.conda/: README.md  meta.yaml
lastricks/: __init__.py  analysis.py  lasprocessor.py  metrics.py  operations_v2.py  tools.py
lastricks/analysis/: metrics.py
lastricks/cleaning/: __init__.py  cleaning.py  new_class_from_gpkg.py  reclassify_above.py
lastricks/core/: __init__.py  input_manager.py  lasprocess.py  lasprocessor.py
lastricks/core/utils/: __init__.py
lastricks/las2las/: __init__.py  copy_field.py
lastricks/manylas/: info.py
lastricks/ops/: __init__.py  las.py  spatial.py
lastricks/qc/: __init__.py  adjust_classification.py  error_cloud.py
test/: _test_tools.py  common_fixtures.py  common_fixtures_v2.py  conftest.py  dummy.py  lasdata_generator.py  mock.las  mock2.las  mock2_wec.las  test_analysis.py  test_cleaner.py  test_cleaner_v2.py  test_lasprocessor_v2.py  test_manylas.py  test_new_class_from_gpkg_v2.py  test_operations.py  test_reclassify_above_v2.py  test_tools.py  test_tools_v2.py  ttest_analysis.py
test/analysis/: _test_analysis_v1.7.py
test/cleaning/: _test_tools.py  common_fixtures.py  common_fixtures_v1.7.py  test_cleaner_v2.py  test_reclassify_above.py  test_reclassify_above_v2.py
test/core/: test_input_manager.py  test_lasprocessor.py  test_lasprocessor_v2.py
test/las2las/: conftest.py  test_copy_field.py
test/ops/: test_concat_las.py  test_spatial.py
test/qc/: conftest.py  test_error_cloud.py
use_cases/: clean_prediction.py  clean_prediction_zone1A_phase1.py  clean_prediction_zone1A_phase2.py  cleaning_pipeline.py  compare_deliveries.py  confusion_matrix.py  confusion_matrix_gt_vs_run18.py  confusion_matrix_gt_vs_tscan.py  confusion_matrix_run18.py  dump_classif_to_rgb.py  emergency_cleaning_area9_part1.py  final_cm.py  generate_extent.py  prepare_ditch_class_dataset.py  qc_subcontractor_error_cloud.py  qc_subcontractor_error_cloud_with_lasprocessor.py
use_cases/compare_deliveries/: README.md  compare_deliveries.py  dgnv8_to_gpkg.fmw  draft_intersection_statistics.ipynb  test_compare_deliveries.py  test_compare_deliveries_v2.py
