[project]
name = "lastricks"
version = "0.1.3"
description = "A few LAS manipulations"
authors = [{name="Elie-Alban LESCOUT", email="elie-alban.lescout@eurosense.com>"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "laspy==2.2.*",
    "laszip==0.1.0",
    "rasterio==1.3.*",
    "numpy==1.23.*",
    "pathos",
    "geopandas==0.11.1",
]

[optional-dependencies]
pytest = "6.2.*"


[project.urls]
"Homepage" = "https://github.com/Stakhan/lastricks"
"Bug Tracker" = "https://github.com/Stakhan/lastricks/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lastricks"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning"
]
