[project]
name = "lastricks"
dynamic = ["version"]
description = "A few LAS manipulations"
authors = [{name="Elie-Alban LESCOUT", email="elie-alban.lescout@eurosense.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "laspy>=2.2",
    "lazrs",
    "rasterio",
    "numpy==1.*",
    "pathos",
    "geopandas",
]


[project.urls]
"Homepage" = "https://github.com/Stakhan/lastricks"
"Bug Tracker" = "https://github.com/Stakhan/lastricks/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lastricks",
            "lastricks.core",
            "lastricks.qc",
            "lastricks.cleaning",
            "lastricks.las2las",
            "lastricks.ops"]

[tool.setuptools-git-versioning]
enabled = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning"
]
